Fix size on iphone

--- a/site/assets/scss/components/_loader.scss
+++ b/site/assets/scss/components/_loader.scss
@@ -10,6 +10,8 @@
     height: 100vh;
     top: 0;
     z-index: 999;
+    max-height: -webkit-fill-available;
+    
     @include media( '>medium' ) {
         top: 0;
     }
